@@ -171,7 +171,11 @@ Export_TASSEL_Numeric <- function(object, file, naIfZeroReads = FALSE,
               append = TRUE, sep = "\t", quote = FALSE)
 }
 
-Export_polymapR <- function(object, naIfZeroReads = TRUE){
+Export_polymapR <- function(object, naIfZeroReads = TRUE,
+                            progeny = GetTaxa(object)[!GetTaxa(object) %in% 
+                                                        c(GetDonorParent(object),
+                                                          GetRecurrentParent(object),
+                                                          GetBlankTaxa(object))]){
   if(!is(object, "RADdata")){
     stop("RADdata object needed")
   }
@@ -185,9 +189,92 @@ Export_polymapR <- function(object, naIfZeroReads = TRUE){
   # make sure parents are first
   don <- GetDonorParent(object)
   rec <- GetRecurrentParent(object)
-  progeny <- GetTaxa(object)[!GetTaxa(object) %in% 
-                               c(don, rec, GetBlankTaxa(object))]
   neworder <- c(don, rec, progeny)
   
   return(out[, neworder])
+}
+
+Export_MAPpoly <- function(object, file, pheno = NULL, ploidyIndex = 1,
+                          progeny = GetTaxa(object)[!GetTaxa(object) %in% c(GetDonorParent(object),
+                                                                            GetRecurrentParent(object),
+                                                                            GetBlankTaxa(object))],
+                          digits = 3){
+  # Confirm that genotype calling has been performed
+  if(is.null(object$likelyGeno_donor) || is.null(object$posteriorProb)){
+    stop("PipelineMapping2Parents needs to be run before using Write_MAPpoly.")
+  }
+  # Check phenotypes
+  if(!is.null(pheno) && is.null(colnames(pheno))){
+    stop("pheno should be a matrix or data frame with column names")
+  }
+  if(!is.null(pheno) && nrow(pheno) != length(progeny)){
+    stop("Need one row of pheno for every progeny.")
+  }
+  if(!is.null(pheno) && !is.null(row.names(pheno)) && !identical(progeny, row.names(pheno))){
+    warning("Please check that progeny vector and rows of pheno are in same order.")
+  }
+  # Check progeny names
+  if(!all(progeny %in% GetTaxa(object))){
+    stop("Not all progeny names found in object.")
+  }
+  # Determine the ploidy
+  if(ploidyIndex > length(object$priorProbPloidies)){
+    stop("ploidyIndex should be the index of the desired ploidy within object$priorProbPloidies (not the ploidy itself).")
+  }
+  ploidy <- object$priorProbPloidies[[ploidyIndex]]
+  if(length(ploidy) != 1){
+    stop("Export is for autopolyploids only.")
+  }
+  
+  # Get parent genotypes
+  donorGen <- object$likelyGeno_donor[as.character(ploidy),]
+  recurGen <- object$likelyGeno_recurrent[as.character(ploidy),]
+  
+  # Identify markers to use
+  keepal <- which(!is.na(donorGen) & !is.na(recurGen) & 
+    !(donorGen == 0 & recurGen == ploidy) & !(donorGen == ploidy & recurGen == 0))
+  keepal <- keepal[!keepal %in% OneAllelePerMarker(object, commonAllele = TRUE)]
+  
+  # Get chromosome and position
+  if(is.null(object$locTable$Chr) || all(is.na(object$locTable$Chr))){
+    chrnum <- NA_integer_
+  } else {
+    chrnum <- .chromosome_to_integer(object$locTable$Chr[object$alleles2loc[keepal]])
+  }
+  if(is.null(object$locTable$Pos) || all(is.na(object$locTable$Pos))){
+    position <- NA_integer_
+  } else {
+    position <- object$locTable$Pos[object$alleles2loc[keepal]]
+  }
+  
+  # Write file header
+  cat(c(paste("ploidy", ploidy),
+        paste("nind", length(progeny)),
+        paste("nmrk", length(keepal)),
+        paste("mrknames", paste(GetAlleleNames(object)[keepal], collapse = " ")),
+        paste("indnames", paste(progeny, collapse = " ")),
+        paste("dosageP", paste(donorGen[keepal], collapse = " ")),
+        paste("dosageQ", paste(recurGen[keepal], collapse = " ")),
+        paste("seq", paste(chrnum, collapse = " ")),
+        paste("seqpos", paste(position, collapse = " ")),
+        paste("nphen", ifelse(is.null(pheno), 0, ncol(pheno))),
+        "pheno---------------------------------------"), file = file, sep = "\n")
+  # Write phenotypes
+  if(!is.null(pheno)){
+    for(i in 1:ncol(pheno)){
+      cat(paste(colnames(pheno)[i], paste(pheno[,i], collapse = " ")),
+          file = file, sep = "\n", append = TRUE)
+    }
+  }
+  cat("geno----------------------------------------", 
+      file = file, sep = "\n", append = TRUE) # line 12 + nphen
+  
+  # Write genotype posterior probabilities
+  genotab <- data.frame(rep(GetAlleleNames(object)[keepal], each = length(progeny)),
+                        rep(progeny, times = length(keepal)),
+                        matrix(round(object$posteriorProb[[ploidyIndex]][, progeny, keepal], digits),
+                               byrow = TRUE, nrow = length(progeny) * length(keepal),
+                               ncol = ploidy + 1))
+  write.table(genotab, file = file, append = TRUE, quote = FALSE,
+              col.names = FALSE, row.names = FALSE)
 }
